# pep-cuda-math

./: .gitignore  CMakeLists.txt  README.md
include/pcmath/: mat.hpp  pcmath.hpp  utils.hpp  vec.hpp
samples/: CMakeLists.txt  device_test.cu  host_test.cpp
